Placeholders en campos de texto y cambios en el css.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1135,13 +1135,13 @@
 }
 
 .titulo-contacto-unica {
-    color: var(--color-principal);
+    color: #673ab7;
     font-size: 2.2em;
     margin-bottom: 5px;
 }
 
 .subtitulo-contacto-unica {
-    color: #666;
+    color: black;
     font-size: 1.1em;
     margin-bottom: 40px;
 }
@@ -1236,7 +1236,7 @@
 /* El botón (etiqueta <summary>) */
 .lore-boton-unica {
     display: inline-block; /* Permite centrarlo y darle estilos de bloque */
-    background-color: var(--color-principal); /* Reutilizamos el azul principal */
+    background-color: #673ab7; /* Reutilizamos el azul principal */
     color: white;
     padding: 12px 30px;
     border-radius: var(--borde-radio);
